Added CORS to WCF service

--- a/UsersWcfService/Web.config
+++ b/UsersWcfService/Web.config
@@ -32,7 +32,13 @@
     </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
+  
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+      </customHeaders>
+    </httpProtocol>
     <modules runAllManagedModulesForAllRequests="true" />
     <!--
         To browse web app root directory during debugging, set the value below to true.
@@ -40,6 +46,7 @@
       -->
     <directoryBrowse enabled="true" />
   </system.webServer>
+  
   <connectionStrings>
     <add name="Entities" connectionString="metadata=res://*/UsersModel.csdl|res://*/UsersModel.ssdl|res://*/UsersModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-SimpleCrudOps-20151119103945.mdf;initial catalog=aspnet-SimpleCrudOps-20151119103945;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
